Fixed layout issue in devices <=720px

--- a/style.css
+++ b/style.css
@@ -198,6 +198,25 @@ body {
   .hamburger-menu {
     display: block;
   }
+
+  .home {
+    margin-left: 15%;
+    margin-right: 20%;
+    margin-top: 7.5rem;
+    margin-bottom: 3.75rem;
+    row-gap: 2rem;
+    column-gap: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    font-family: 'Signika Negative', serif, Arial;
+    font-size: 1.5rem;
+  }
+
+  .country-card {
+  }
 }
 
 @media (max-width: 400px) {
